# Teamer

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
ops/: start-api.sh
src/: base_settings.py  main.py  routes.py
