[tool.poetry]
name = "teamer"
version = "0.1.0"
description = ""
authors = ["ChernovMykola <4ernovnikola@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
